<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient_background"
    tools:context=".view.SplashScreen">

    <ImageView
        android:id="@+id/floating_star1"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_star"
        android:alpha="0.7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/decorative_star" />

    <ImageView
        android:id="@+id/floating_star2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_star"
        android:alpha="0.6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/decorative_star" />

    <androidx.cardview.widget.CardView
        android:id="@+id/logo_container"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:cardCornerRadius="80dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/brainyexplorer_logo"
            android:scaleType="centerInside" />

    </androidx.cardview.widget.CardView>



    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comic_neue_bold"
        android:shadowColor="@color/purple_700"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/brainyexplorer"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_container" />


    <TextView
        android:id="@+id/app_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore_learn_grow"
        android:textSize="18sp"
        android:textColor="@color/yellow_bright"
        android:fontFamily="@font/comic_neue_light"
        android:letterSpacing="0.1"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />


</androidx.constraintlayout.widget.ConstraintLayout>